syntax = "proto3"
package messages

import "google/protobuf/oneof.proto"
import "google/protobuf/duration.proto"

option go_package = "github.com/samirgadkari/sidecar/protos/go/messagespb";

message Circuit {
	uint8 FailureThreshold = 0;	
}

message Debounce {
	google.protobuf.Duration Delay = 0;
}

message Retry {
	uint16 Retries = 0;
	google.protobuf.Duration Delay = 1;
}

message Limit {
	oneof limit {
		Circuit circuit = 0;
		Debounce debounce = 1;
		Retry retry = 2;
	}
}

message Header {
	string ServType = 1;
	uint64 ServId = 2;
	uint64 ReqId = 3;
	uint16 MsgId = 4;
}

message RegistrationMsg {

	Header header = 0;
	repeated Limit limits = 1;
}

